--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -21,13 +21,26 @@ layout: default
 <div id="main" role="main">
   {% include sidebar.html %}
 
+  <!-- 본문 상단 고정 광고 -->
+  <div class="fixed-ad">
+      <ins class="adsbygoogle"
+           style="display:block; margin: auto;"
+           data-ad-client="ca-pub-9374368296307755"
+           data-ad-slot="9952845435"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+  </div>
+
   <article class="page" itemscope itemtype="https://schema.org/CreativeWork"{% if page.locale %} lang="{{ page.locale }}"{% endif %}>
     {% if page.title %}<meta itemprop="headline" content="{{ page.title | replace: '|', '&#124;' | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
     {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
     {% if page.date %}<meta itemprop="datePublished" content="{{ page.date | date_to_xmlschema }}">{% endif %}
     {% if page.last_modified_at %}<meta itemprop="dateModified" content="{{ page.last_modified_at | date_to_xmlschema }}">{% endif %}
 
-    <div class="page__inner-wrap">
+    <div class="page__inner-wrap fixed-ad-padding">
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.title -%}
@@ -171,6 +184,22 @@ layout: default
 
         #closeAdButton:hover {
             background-color: #0056b3;
+        }
+
+        /* 본문 상단 광고 고정 스타일 */
+        .fixed-ad {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #fff;
+            z-index: 1001;
+            text-align: center;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .fixed-ad-padding {
+            margin-top: 100px; /* 광고 높이만큼 본문 아래 패딩 추가 */
         }
     </style>
 </head>
