--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -213,11 +213,11 @@ layout: default
     <!-- 본문 상단에 고정 광고 -->
     <div class="fixed-ad">
       <ins class="adsbygoogle"
-           style="display:block; max-width: 728px; height: 90px; margin: auto; text-align: center;"
+           style="display:inline-block; width: 320px; height: 50px; margin: auto; text-align: center;"
            data-ad-client="ca-pub-9374368296307755"
            data-ad-slot="9952845435"
            data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
+           data-full-width-responsive="false"></ins>
       <script>
           (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
@@ -228,21 +228,21 @@ layout: default
           position: fixed;
           top: 0;
           left: 0;
-          width: 30%;
+          width: 100%;
           background-color: #fff;
           z-index: 1002; /* 충분히 높은 z-index로 설정 */
           box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-          padding: 10px 0;
+          padding: 5px 0;
       }
       body {
-          margin-top: 110px; /* 광고 높이만큼 본문 상단 여백 추가 */
+          margin-top: 60px; /* 광고 높이에 맞게 여백 설정 */
       }
   </style>
 
   <!-- 기존의 본문 내용 -->
   <div id="main" role="main">
       <!-- 콘텐츠 영역 -->
-  </div>
+  </di
 
 <div id="overlay" onclick="closePopup()"></div>
 
