--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -77,59 +77,7 @@ layout: default
   {% endif %}
 </div>
 
-<!-- 하단 고정 광고 영역 -->
-<div id="fixedAd" style="overflow: hidden;">
-  <ins class="adsbygoogle"
-       style="display:block; width:100%; height:90px;"
-       data-ad-client="ca-pub-9374368296307755"
-       data-ad-slot="1724698171"
-       data-ad-format="horizontal"
-       data-full-width-responsive="true"></ins>
-  <button id="closeFixedAd" onclick="closeFixedAd()">X</button>
-</div>
 
-<script>
-  window.onload = function() {
-      document.getElementById('fixedAd').style.display = 'block'; // 항상 보이게 설정
-      try {
-          (adsbygoogle = window.adsbygoogle || []).push({});
-      } catch (e) {
-          console.error("AdSense error:", e);
-      }
-  };
-
-  function closeFixedAd() {
-      document.getElementById('fixedAd').style.display = 'none';
-  }
-</script>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
-   crossorigin="anonymous"></script>
-
-<style>
-  #fixedAd {
-      display: block;
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 90px;
-      background-color: #fff;
-      z-index: 1000;
-      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-      text-align: center;
-  }
-
-  #closeFixedAd {
-      position: absolute;
-      top: 5px;
-      right: 10px;
-      background: none;
-      border: none;
-      font-size: 14px;
-      cursor: pointer;
-  }
-</style>
 
 
 
@@ -221,6 +169,16 @@ layout: default
     </style>
 </head>
 <body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
+  crossorigin="anonymous"></script>
+<!-- 하단광고 -->
+<ins class="adsbygoogle"
+  style="display:inline-block;width:728px;height:90px"
+  data-ad-client="ca-pub-9374368296307755"
+  data-ad-slot="1724698171"></ins>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+</script>  
 
 <div id="overlay" onclick="closePopup()"></div>
 
