--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -92,7 +92,7 @@ layout: default
    crossorigin="anonymous"></script>
 <script>
   window.onload = function() {
-      document.getElementById('fixedAd').style.display = 'block'; // 광고 보이기
+      document.getElementById('fixedAd').style.display = 'block';
       try {
           (adsbygoogle = window.adsbygoogle || []).push({});
       } catch (e) {
@@ -101,7 +101,7 @@ layout: default
   };
 
   function closeFixedAd() {
-      document.getElementById('fixedAd').style.display = 'none'; // 광고 숨기기
+      document.getElementById('fixedAd').style.display = 'none';
   }
 </script>
 
@@ -112,7 +112,7 @@ layout: default
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 60px; /* 높이 조절 가능 */
+      height: 60px; /* 광고 높이 */
       background-color: #fff;
       z-index: 1000;
       box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
@@ -126,7 +126,7 @@ layout: default
       right: 10px;
       background: none;
       border: none;
-      font-size: 16px; /* 닫기 버튼 크기 */
+      font-size: 16px;
       cursor: pointer;
   }
 
@@ -140,6 +140,7 @@ layout: default
       }
   }
 </style>
+
 
 
 
