--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -80,15 +80,16 @@ layout: default
 <!-- 하단 고정 광고 영역 -->
 <div id="fixedAd">
   <ins class="adsbygoogle"
-       style="display:block; width:100%; height:60px;"
+       style="display:block"
        data-ad-client="ca-pub-9374368296307755"
-       data-ad-slot="1724698171"
-       data-ad-format="horizontal"
+       data-ad-slot="9952845435"
+       data-ad-format="auto"
        data-full-width-responsive="true"></ins>
   <button id="closeFixedAd" onclick="closeFixedAd()">X</button>
 </div>
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
+     crossorigin="anonymous"></script>
 <script>
     window.onload = function() {
         document.getElementById('fixedAd').style.display = 'block'; // 광고 보이기
@@ -111,7 +112,6 @@ layout: default
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 60px; /* 광고 높이 */
         background-color: #fff;
         z-index: 1000;
         box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
@@ -132,7 +132,7 @@ layout: default
     /* 모바일 대응 스타일 */
     @media screen and (max-width: 768px) {
         #fixedAd {
-            height: 50px; /* 모바일에서 높이 조정 */
+            height: auto; /* 광고의 높이가 자동으로 조정됨 */
         }
         #closeFixedAd {
             font-size: 14px; /* 모바일에서 닫기 버튼 크기 조정 */
