--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -80,7 +80,7 @@ layout: default
 <!-- 하단 고정 광고 영역 -->
 <div id="fixedAd">
   <ins class="adsbygoogle"
-       style="display:block"
+       style="display:block; width:100%; height:auto;"
        data-ad-client="ca-pub-9374368296307755"
        data-ad-slot="9952845435"
        data-ad-format="auto"
@@ -89,56 +89,57 @@ layout: default
 </div>
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
-     crossorigin="anonymous"></script>
+   crossorigin="anonymous"></script>
 <script>
-    window.onload = function() {
-        document.getElementById('fixedAd').style.display = 'block'; // 광고 보이기
-        try {
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        } catch (e) {
-            console.error("AdSense error:", e);
-        }
-    };
+  window.onload = function() {
+      document.getElementById('fixedAd').style.display = 'block'; // 광고 보이기
+      try {
+          (adsbygoogle = window.adsbygoogle || []).push({});
+      } catch (e) {
+          console.error("AdSense error:", e);
+      }
+  };
 
-    function closeFixedAd() {
-        document.getElementById('fixedAd').style.display = 'none'; // 광고 숨기기
-    }
+  function closeFixedAd() {
+      document.getElementById('fixedAd').style.display = 'none'; // 광고 숨기기
+  }
 </script>
 
 <style>
-    #fixedAd {
-        display: block;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        background-color: #fff;
-        z-index: 1000;
-        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-        text-align: center;
-        padding: 5px 0;
-    }
+  #fixedAd {
+      display: block;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: #fff;
+      z-index: 1000;
+      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      padding: 5px 0;
+  }
 
-    #closeFixedAd {
-        position: absolute;
-        top: 5px;
-        right: 10px;
-        background: none;
-        border: none;
-        font-size: 16px; /* 닫기 버튼 크기 */
-        cursor: pointer;
-    }
+  #closeFixedAd {
+      position: absolute;
+      top: 5px;
+      right: 10px;
+      background: none;
+      border: none;
+      font-size: 16px; /* 닫기 버튼 크기 */
+      cursor: pointer;
+  }
 
-    /* 모바일 대응 스타일 */
-    @media screen and (max-width: 768px) {
-        #fixedAd {
-            height: auto; /* 광고의 높이가 자동으로 조정됨 */
-        }
-        #closeFixedAd {
-            font-size: 14px; /* 모바일에서 닫기 버튼 크기 조정 */
-        }
-    }
+  /* 모바일 대응 스타일 */
+  @media screen and (max-width: 768px) {
+      #fixedAd {
+          height: auto; /* 모바일에서 높이 조정 */
+      }
+      #closeFixedAd {
+          font-size: 14px; /* 모바일에서 닫기 버튼 크기 조정 */
+      }
+  }
 </style>
+
 
 
 
